finally got #2 done i believe

--- a/bangazonapireports/templates/users/list_with_users.html
+++ b/bangazonapireports/templates/users/list_with_users.html
@@ -9,11 +9,11 @@
     <h1>User favorites</h1>
 
     {% for user in userfavorite_list %}
-        <h2>{{ user.full_name }}</h2>
+        <h2>{{ user.customer_name }}</h2>
         <ol>
-            {% for game in user.seller %}
+            {% for seller in user.sellers %}
             <li>
-                Title: {{ seller.title }}
+                Title: {{ seller.seller_name }}
             </li>
             {% endfor %}
         </ol>
